force-app/main/default/objects/Dealer_Scorecard__c/fields/RD_Regional_Call_Attendance_Score__c.field-meta.xml
<CustomField>
    <fullName>RD_Regional_Call_Attendance_Score__c</fullName>
    <formula>CASE( RD_Regional_Call_Attendance__c , 
&quot;All&quot;,10, 
&quot;Some&quot;,5, 
&quot;None&quot;,1, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RD - Regional Call Attendance Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>