force-app/main/default/objects/Dealer_Scorecard__c/fields/Receipt_Submission__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Submission__c</fullName>
    <description>Indicates how well the Dealer submitted receipts for expenses during the Build-out or Remodel.</description>
    <inlineHelpText>Select the timeliness to which the Dealer submitted their receipts for expenses.</inlineHelpText>
    <label>Receipt Submission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On time</fullName>
            </value>
            <value>
                <fullName>Sometimes Late</fullName>
            </value>
            <value>
                <fullName>Mostly Late</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>