force-app/main/default/objects/Dealer_Scorecard__c/fields/ROM_Comments__c.field-meta.xml
<CustomField>
    <fullName>ROM_Comments__c</fullName>
    <description>Enter any additional comments as part of your review.</description>
    <inlineHelpText>Enter any additional comments as part of your review.</inlineHelpText>
    <label>ROM - Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>