force-app/main/default/objects/Dealer_Scorecard__c/fields/ROM_Employee_Training__c.field-meta.xml
<CustomField>
    <fullName>ROM_Employee_Training__c</fullName>
    <description>Select the most appropriate representation of how well the dealer provides training information to their employees.</description>
    <inlineHelpText>Select the most appropriate representation of how well the dealer provides training information to their employees.</inlineHelpText>
    <label>ROM - Employee Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Issues</fullName>
            </value>
            <value>
                <fullName>Moderate Issues</fullName>
            </value>
            <value>
                <fullName>Significant Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>