force-app/main/default/objects/Dealer_Scorecard__c/fields/ROM_Marketing_Meeting_Score__c.field-meta.xml
<CustomField>
    <fullName>ROM_Marketing_Meeting_Score__c</fullName>
    <formula>CASE(  ROM_Marketing_Meeting_Attendance__c  , 
&quot;All&quot;,10, 
&quot;Some&quot;,5, 
&quot;None&quot;,1, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROM - Marketing Meeting Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>