force-app/main/default/objects/Dealer_Scorecard__c/fields/ROM_Red_Wing_Marketing__c.field-meta.xml
<CustomField>
    <fullName>ROM_Red_Wing_Marketing__c</fullName>
    <description>Indicates the level of participation in the Red Wing marketing programs.</description>
    <inlineHelpText>Indicates the level of participation in the Red Wing marketing programs.</inlineHelpText>
    <label>ROM - Red Wing Marketing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4%</fullName>
            </value>
            <value>
                <fullName>3%</fullName>
            </value>
            <value>
                <fullName>2%</fullName>
            </value>
            <value>
                <fullName>1%</fullName>
            </value>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
                <isActive>false</isActive>
                <label>Bronze</label>
            </value>
            <value>
                <fullName>Gold</fullName>
                <isActive>false</isActive>
                <label>Gold</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <isActive>false</isActive>
                <label>Red</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>