force-app/main/default/objects/Dealer_Scorecard__c/fields/ROM_Regional_Cooperation__c.field-meta.xml
<CustomField>
    <fullName>ROM_Regional_Cooperation__c</fullName>
    <description>Indicates the level of cooperation with other stores in their region.</description>
    <inlineHelpText>Does the dealer accept returns from other stores, provide store transfers of shoes, etc.?</inlineHelpText>
    <label>ROM - Regional Cooperation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Some</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>