force-app/main/default/objects/Dealer_Scorecard__c/fields/ROM_Regional_Meeting_Attendance__c.field-meta.xml
<CustomField>
    <fullName>ROM_Regional_Meeting_Attendance__c</fullName>
    <description>Select the most appropriate level that represents the dealers participation in regional meetings.</description>
    <inlineHelpText>Select the most appropriate level that represents the dealers participation in regional meetings.</inlineHelpText>
    <label>ROM - Regional Meeting Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Some</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>