force-app/main/default/objects/Dealer_Scorecard__c/fields/ROM_Score__c.field-meta.xml
<CustomField>
    <fullName>ROM_Score__c</fullName>
    <label>ROM - Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>