force-app/main/default/objects/Dealer_Scorecard__c/fields/ROM_SOP_Compliance__c.field-meta.xml
<CustomField>
    <fullName>ROM_SOP_Compliance__c</fullName>
    <description>Select the most appropriate level for the dealer following Standard Operating Procedures.</description>
    <inlineHelpText>Select the most appropriate level for the dealer following Standard Operating Procedures.</inlineHelpText>
    <label>ROM - SOP Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Some</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>