force-app/main/default/objects/Dealer_Scorecard__c/fields/ROM_Store_Visit_Reports__c.field-meta.xml
<CustomField>
    <fullName>ROM_Store_Visit_Reports__c</fullName>
    <description>Select the most appropriate level for the dealer store visit results during the year.</description>
    <inlineHelpText>Select the most appropriate level for the dealer store visit results during the year.</inlineHelpText>
    <label>ROM - Store Visit Reports</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Issues</fullName>
            </value>
            <value>
                <fullName>Moderate Issues</fullName>
            </value>
            <value>
                <fullName>Significant Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>