force-app/main/default/objects/Dealer_Scorecard__c/fields/ROM_Store_Visit_Reports_Score__c.field-meta.xml
<CustomField>
    <fullName>ROM_Store_Visit_Reports_Score__c</fullName>
    <formula>CASE(  ROM_Store_Visit_Reports__c  , 
&quot;No Issues&quot;,10, 
&quot;Moderate Issues&quot;,5, 
&quot;Significant Issues&quot;,1, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROM - Store Visit Reports Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>