force-app/main/default/objects/Dealer_Scorecard__c/fields/RWS_Contractor_Score__c.field-meta.xml
<CustomField>
    <fullName>RWS_Contractor_Score__c</fullName>
    <description>Calculates the score for using RWS contractors on the Build or Remodel.</description>
    <formula>CASE(  RWS_Contractors_Used__c  , 
&quot;All&quot;,10, 
&quot;Some&quot;,5, 
&quot;None&quot;,0, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RWS Contractor Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>