force-app/main/default/objects/Dealer_Scorecard__c/fields/RWS_Contractors_Used__c.field-meta.xml
<CustomField>
    <fullName>RWS_Contractors_Used__c</fullName>
    <description>Indicates to what extent the dealer used our contractors during the build-out or remodel.</description>
    <inlineHelpText>Did the dealer use our contractors for the build-out or remodel?</inlineHelpText>
    <label>RWS Contractors Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Some</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>