force-app/main/default/objects/Dealer_Scorecard__c/fields/RWS_Site_Design_Compliance__c.field-meta.xml
<CustomField>
    <fullName>RWS_Site_Design_Compliance__c</fullName>
    <description>Indicates how well the Dealer complies with RWS site design and recommendations.</description>
    <inlineHelpText>Identify the level of compliance the Dealer implemented the RWS site design specifications.</inlineHelpText>
    <label>RWS Site Design Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Some</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>