force-app/main/default/objects/Dealer_Scorecard__c/fields/Scorecard_Type__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_Type__c</fullName>
    <description>Indicates the type of scorecard being completed.</description>
    <inlineHelpText>Select the appropriate type of scorecard.</inlineHelpText>
    <label>Scorecard Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Review</fullName>
            </value>
            <value>
                <fullName>Store Build-out</fullName>
            </value>
            <value>
                <fullName>Store Remodel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>