force-app/main/default/objects/Dealer_Scorecard__c/fields/Store_Number__c.field-meta.xml
<CustomField>
    <fullName>Store_Number__c</fullName>
    <formula>Dealer__r.Store_Number__c</formula>
    <label>Store Number</label>
    <type>Text</type>
</CustomField>