force-app/main/default/objects/Dealer_Scorecard__c/fields/Task_Completion__c.field-meta.xml
<CustomField>
    <fullName>Task_Completion__c</fullName>
    <description>Indicates how well the Dealer completed assigned tasks on-time during the Build-out or Remodel.</description>
    <inlineHelpText>Select the level at which the Dealer completed their assigned tasks.</inlineHelpText>
    <label>Task Completion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Time</fullName>
            </value>
            <value>
                <fullName>Sometimes Late</fullName>
            </value>
            <value>
                <fullName>Mostly Late</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>