force-app/main/default/objects/Dealer_Scorecard__c/fields/Task_Completion_Score__c.field-meta.xml
<CustomField>
    <fullName>Task_Completion_Score__c</fullName>
    <formula>CASE( Task_Completion__c , 
&quot;On Time&quot;,10, 
&quot;Sometimes Late&quot;,5, 
&quot;Mostly Late&quot;,1, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Completion Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>