force-app/main/default/objects/Dealer_Scorecard__c/fields/Training_Attendance_and_Participation__c.field-meta.xml
<CustomField>
    <fullName>Training_Attendance_and_Participation__c</fullName>
    <description>Indicates the extent to which the dealer and their employees participated in the training.</description>
    <inlineHelpText>Select the level of participation in the training for the dealer and their employees.</inlineHelpText>
    <label>Training Attendance and Participation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Some</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>