force-app/main/default/objects/Dealer_Scorecard__c/fields/Training_Attendance_Score__c.field-meta.xml
<CustomField>
    <fullName>Training_Attendance_Score__c</fullName>
    <description>Calculates the Training Attendance and Participation Score</description>
    <formula>CASE( Training_Attendance_and_Participation__c ,
     &quot;All&quot;,10,
     &quot;Some&quot;,5,
     &quot;None&quot;,1,
     0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Attendance Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>