force-app/main/default/objects/Dealer_Scorecard__c/fields/TSM_Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>TSM_Overall_Score__c</fullName>
    <formula>( TSM_Program_Compliance_Score__c  + TSM_Regional_Cooperation_Score__c + TSM_Red_Wing_Marketing_Score__c  ) / 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TSM - Overall Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>