force-app/main/default/objects/Dealer_Scorecard__c/fields/TSM_Program_Compliance_Score__c.field-meta.xml
<CustomField>
    <fullName>TSM_Program_Compliance_Score__c</fullName>
    <formula>CASE(  TSM_Red_Wing_Program_Compliance__c  , 
&quot;All&quot;,10, 
&quot;Some&quot;,5, 
&quot;None&quot;,1, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TSM - Program Compliance Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>