force-app/main/default/objects/Dealer_Scorecard__c/fields/TSM_Red_Wing_Marketing_Score__c.field-meta.xml
<CustomField>
    <fullName>TSM_Red_Wing_Marketing_Score__c</fullName>
    <formula>CASE(  TSM_Red_Wing_Marketing__c  , 
&quot;4%&quot;,10, 
&quot;3%&quot;,8, 
&quot;2%&quot;,6, 
&quot;1%&quot;,4,
&quot;0%&quot;,0, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TSM - Red Wing Marketing Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>