force-app/main/default/objects/Dealer_Scorecard__c/fields/TSM_Red_Wing_Program_Compliance__c.field-meta.xml
<CustomField>
    <fullName>TSM_Red_Wing_Program_Compliance__c</fullName>
    <description>Indicates the level to which the Dealer participates in the Red Wing Program(s)</description>
    <inlineHelpText>Select the most appropriate level of participation for the dealer in the Red Wing Program(s)</inlineHelpText>
    <label>TSM - Red Wing Program Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Some</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>